feat: add environment variable strategy

--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,17 @@
 # .env file
 
-CLIENT_PORT=3000
-
-REACT_APP_AUTH_DOMAIN=
-REACT_APP_AUTH_AUDIENCE=
-REACT_APP_AUTH_CLIENT_ID=
-
-REACT_APP_BACKEND=
-REACT_APP_LOCAL_BACKEND=http://localhost:4000/api/v1
+PORT=3000
+REACT_APP_NAME=
+REACT_APP_LOCAL_BACKEND=
+REACT_APP_DEVELOPMENT_AUTH_DOMAIN=
+REACT_APP_DEVELOPMENT_AUTH_AUDIENCE=
+REACT_APP_DEVELOPMENT_AUTH_CLIENT=
+REACT_APP_DEVELOPMENT_BACKEND=
+REACT_APP_STAGING_AUTH_DOMAIN=
+REACT_APP_STAGING_AUTH_AUDIENCE=
+REACT_APP_STAGING_AUTH_CLIENT=
+REACT_APP_STAGING_BACKEND=
+REACT_APP_PRODUCTION_AUTH_DOMAIN=
+REACT_APP_PRODUCTION_AUTH_AUDIENCE=
+REACT_APP_PRODUCTION_AUTH_CLIENT=
+REACT_APP_PRODUCTION_BACKEND=
