--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,26 @@ services:
       context: .
       target: dev
     environment:
-      CHOKIDAR_USEPOLLING: "true"
-      REACT_APP_BACKEND: $REACT_APP_LOCAL_BACKEND
-      REACT_APP_AUTH_DOMAIN: $REACT_APP_AUTH_DOMAIN
-      REACT_APP_AUTH_AUDIENCE: $REACT_APP_AUTH_AUDIENCE
-      REACT_APP_AUTH_CLIENT_ID: $REACT_APP_AUTH_CLIENT_ID
+      REACT_APP_NAME: "DevPie Client"
+      REACT_APP_ENV: "local"
+      REACT_APP_LOCAL_BACKEND: $REACT_APP_LOCAL_BACKEND
+      REACT_APP_DEVELOPMENT_AUTH_DOMAIN: $REACT_APP_DEVELOPMENT_AUTH_DOMAIN
+      REACT_APP_DEVELOPMENT_AUTH_AUDIENCE: $REACT_APP_DEVELOPMENT_AUTH_AUDIENCE
+      REACT_APP_DEVELOPMENT_AUTH_CLIENT: $REACT_APP_DEVELOPMENT_AUTH_CLIENT
+      REACT_APP_DEVELOPMENT_BACKEND: $REACT_APP_DEVELOPMENT_BACKEND
+      REACT_APP_STAGING_AUTH_DOMAIN: $REACT_APP_STAGING_AUTH_DOMAIN
+      REACT_APP_STAGING_AUTH_AUDIENCE: $REACT_APP_STAGING_AUTH_AUDIENCE
+      REACT_APP_STAGING_AUTH_CLIENT: $REACT_APP_STAGING_AUTH_CLIENT
+      REACT_APP_STAGING_BACKEND: $REACT_APP_STAGING_BACKEND
+      REACT_APP_PRODUCTION_AUTH_DOMAIN: $REACT_APP_PRODUCTION_AUTH_DOMAIN
+      REACT_APP_PRODUCTION_AUTH_AUDIENCE: $REACT_APP_PRODUCTION_AUTH_AUDIENCE
+      REACT_APP_PRODUCTION_AUTH_CLIENT: $REACT_APP_PRODUCTION_AUTH_CLIENT
+      REACT_APP_PRODUCTION_BACKEND: $REACT_APP_PRODUCTION_BACKEND
+      PORT: $PORT
+      HTTPS: "true"
     restart: always
     ports:
-      - $CLIENT_PORT:$CLIENT_PORT
+      - $PORT:$PORT
     volumes:
       - .:/client/app
       - /client/app/node_modules
