--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.12.0",
-    "@material-ui/core": "^3.9.2",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^3.0.0-alpha.10",
+    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -19,7 +20,6 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
-    "@types/redux-actions": "^2.6.1",
     "@types/redux-form": "^8.3.0",
     "axios": "^0.20.0",
     "connected-react-router": "^6.3.1",
@@ -35,7 +35,6 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.4.3",
     "redux": "^4.0.1",
-    "redux-actions": "^2.6.5",
     "redux-form": "^8.2.0",
     "redux-thunk": "^2.3.0",
     "typescript": "~3.7.2"
