--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.12.0",
     "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^3.0.2",
-    "@material-ui/styles": "^3.0.0-alpha.10",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "4.10.0",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/classnames": "^2.2.10",
     "@types/jest": "^24.0.0",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^12.0.0",
@@ -22,13 +23,14 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-form": "^8.3.0",
     "axios": "^0.20.0",
+    "classnames": "^2.2.6",
     "connected-react-router": "^6.3.1",
     "exif-react-avatar-edit": "^0.8.3",
     "history": "^4.7.2",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^10.1.0",
-    "react-device-detect": "^1.6.2",
+    "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
