--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,18 +8,22 @@ services:
       REACT_APP_NAME: "DevPie Client"
       REACT_APP_ENV: "local"
       REACT_APP_LOCAL_BACKEND: $REACT_APP_LOCAL_BACKEND
-      REACT_APP_DEVELOPMENT_AUTH_DOMAIN: $REACT_APP_DEVELOPMENT_AUTH_DOMAIN
-      REACT_APP_DEVELOPMENT_AUTH_AUDIENCE: $REACT_APP_DEVELOPMENT_AUTH_AUDIENCE
-      REACT_APP_DEVELOPMENT_AUTH_CLIENT: $REACT_APP_DEVELOPMENT_AUTH_CLIENT
-      REACT_APP_DEVELOPMENT_BACKEND: $REACT_APP_DEVELOPMENT_BACKEND
-      REACT_APP_STAGING_AUTH_DOMAIN: $REACT_APP_STAGING_AUTH_DOMAIN
-      REACT_APP_STAGING_AUTH_AUDIENCE: $REACT_APP_STAGING_AUTH_AUDIENCE
-      REACT_APP_STAGING_AUTH_CLIENT: $REACT_APP_STAGING_AUTH_CLIENT
-      REACT_APP_STAGING_BACKEND: $REACT_APP_STAGING_BACKEND
-      REACT_APP_PRODUCTION_AUTH_DOMAIN: $REACT_APP_PRODUCTION_AUTH_DOMAIN
-      REACT_APP_PRODUCTION_AUTH_AUDIENCE: $REACT_APP_PRODUCTION_AUTH_AUDIENCE
-      REACT_APP_PRODUCTION_AUTH_CLIENT: $REACT_APP_PRODUCTION_AUTH_CLIENT
-      REACT_APP_PRODUCTION_BACKEND: $REACT_APP_PRODUCTION_BACKEND
+      REACT_APP_DEV_COGNITO_IDENTITY: $REACT_APP_DEV_COGNITO_IDENTITY
+      REACT_APP_DEV_COGNITO_REGION: $REACT_APP_DEV_COGNITO_REGION
+      REACT_APP_DEV_S3_BUCKET: $REACT_APP_DEV_S3_BUCKET
+      REACT_APP_DEV_S3_BUCKET_REGION: $REACT_APP_DEV_S3_BUCKET_REGION
+      REACT_APP_DEV_AUTH_DOMAIN: $REACT_APP_DEV_AUTH_DOMAIN
+      REACT_APP_DEV_AUTH_AUDIENCE: $REACT_APP_DEV_AUTH_AUDIENCE
+      REACT_APP_DEV_AUTH_CLIENT: $REACT_APP_DEV_AUTH_CLIENT
+      REACT_APP_DEV_BACKEND: $REACT_APP_DEV_BACKEND
+      REACT_APP_STAGE_AUTH_DOMAIN: $REACT_APP_STAGE_AUTH_DOMAIN
+      REACT_APP_STAGE_AUTH_AUDIENCE: $REACT_APP_STAGE_AUTH_AUDIENCE
+      REACT_APP_STAGE_AUTH_CLIENT: $REACT_APP_STAGE_AUTH_CLIENT
+      REACT_APP_STAGE_BACKEND: $REACT_APP_STAGE_BACKEND
+      REACT_APP_PROD_AUTH_DOMAIN: $REACT_APP_PROD_AUTH_DOMAIN
+      REACT_APP_PROD_AUTH_AUDIENCE: $REACT_APP_PROD_AUTH_AUDIENCE
+      REACT_APP_PROD_AUTH_CLIENT: $REACT_APP_PROD_AUTH_CLIENT
+      REACT_APP_PROD_BACKEND: $REACT_APP_PROD_BACKEND
       PORT: $PORT
       HTTPS: "true"
     restart: always
