--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-form": "^8.3.0",
+    "aws-amplify": "^3.3.1",
+    "aws-sdk": "^2.757.0",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.3.1",
@@ -48,6 +50,7 @@
     "build:dev": "cross-env REACT_APP_ENV=dev react-scripts build",
     "build:stage": "cross-env REACT_APP_ENV=stage react-scripts build",
     "build:prod": "cross-env REACT_APP_ENV=prod react-scripts build",
+    "postinstall": "patch-package",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -67,6 +70,7 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.2"
+    "cross-env": "^7.0.2",
+    "patch-package": "^6.2.2"
   }
 }
