--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-form": "^8.3.0",
+    "@types/ua-parser-js": "^0.7.33",
     "aws-amplify": "^3.3.1",
     "aws-sdk": "^2.757.0",
     "axios": "^0.20.0",
@@ -32,21 +33,21 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^10.1.0",
-    "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.1",
-    "redux-form": "^8.2.0",
+    "redux-form": "^8.3.6",
     "redux-thunk": "^2.3.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "ua-parser-js": "^0.7.22"
   },
   "scripts": {
-    "start": "cross-env REACT_APP_ENV=local HTTPS=true react-scripts start",
-    "dev": "cross-env REACT_APP_ENV=dev HTTPS=true react-scripts start",
-    "stage": "cross-env REACT_APP_ENV=stage HTTPS=true react-scripts start",
+    "start": "cross-env REACT_APP_ENV=local HTTPS=true react-app-rewired start",
+    "dev": "cross-env REACT_APP_ENV=dev HTTPS=true react-app-rewired start",
+    "stage": "cross-env REACT_APP_ENV=stage HTTPS=true react-app-rewired start",
     "build:dev": "cross-env REACT_APP_ENV=dev react-scripts build",
     "build:stage": "cross-env REACT_APP_ENV=stage react-scripts build",
     "build:prod": "cross-env REACT_APP_ENV=prod react-scripts build",
@@ -70,7 +71,10 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.13.0",
     "cross-env": "^7.0.2",
-    "patch-package": "^6.2.2"
+    "customize-cra": "^1.0.0",
+    "patch-package": "^6.2.2",
+    "react-app-rewired": "^2.1.6"
   }
 }
