refactor: auth and disable projects

--- a/.env.sample
+++ b/.env.sample
@@ -3,7 +3,7 @@
 HTTPS=true
 PORT=3000
 REACT_APP_NAME=
-REACT_APP_LOCAL_BACKEND=
+REACT_APP_LOCAL_BACKEND=http://client-backend.devpie.local/v1
 REACT_APP_DEV_COGNITO_IDENTITY=
 REACT_APP_DEV_COGNITO_REGION=
 REACT_APP_DEV_S3_BUCKET=
