--- a/package.json
+++ b/package.json
@@ -2,6 +2,32 @@
   "name": "devpie-client-app",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "cross-env REACT_APP_ENV=local HTTPS=false react-app-rewired start",
+    "dev": "cross-env REACT_APP_ENV=dev HTTPS=true react-app-rewired start",
+    "stage": "cross-env REACT_APP_ENV=stage HTTPS=true react-app-rewired start",
+    "build:dev": "cross-env REACT_APP_ENV=dev react-scripts build",
+    "build:stage": "cross-env REACT_APP_ENV=stage react-scripts build",
+    "build:prod": "cross-env REACT_APP_ENV=prod react-scripts build",
+    "postinstall": "patch-package",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.12.0",
     "@material-ui/core": "^4.11.0",
@@ -43,32 +69,6 @@
     "redux-thunk": "^2.3.0",
     "typescript": "~3.7.2",
     "ua-parser-js": "^0.7.22"
-  },
-  "scripts": {
-    "start": "cross-env REACT_APP_ENV=local HTTPS=true react-app-rewired start",
-    "dev": "cross-env REACT_APP_ENV=dev HTTPS=true react-app-rewired start",
-    "stage": "cross-env REACT_APP_ENV=stage HTTPS=true react-app-rewired start",
-    "build:dev": "cross-env REACT_APP_ENV=dev react-scripts build",
-    "build:stage": "cross-env REACT_APP_ENV=stage react-scripts build",
-    "build:prod": "cross-env REACT_APP_ENV=prod react-scripts build",
-    "postinstall": "patch-package",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   },
   "devDependencies": {
     "babel-plugin-import": "^1.13.0",
