--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "cross-env REACT_APP_ENV=local HTTPS=false react-app-rewired start",
+    "start": "cross-env REACT_APP_ENV=local HTTPS=true react-app-rewired start",
     "dev": "cross-env REACT_APP_ENV=dev HTTPS=true react-app-rewired start",
     "stage": "cross-env REACT_APP_ENV=stage HTTPS=true react-app-rewired start",
     "build:dev": "cross-env REACT_APP_ENV=dev react-scripts build",
@@ -61,7 +61,7 @@
     "react-beautiful-dnd": "^10.1.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.0",
-    "react-router": "^5.0.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.1",
