--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "connected-react-router": "^6.3.1",
     "exif-react-avatar-edit": "^0.8.3",
     "history": "^4.7.2",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^10.1.0",
@@ -71,6 +72,7 @@
     "ua-parser-js": "^0.7.22"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
     "babel-plugin-import": "^1.13.0",
     "cross-env": "^7.0.2",
     "customize-cra": "^1.0.0",
