--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,27 +5,17 @@ services:
       context: .
       target: dev
     environment:
-      REACT_APP_NAME: "DevPie Client"
-      REACT_APP_ENV: "local"
-      REACT_APP_LOCAL_BACKEND: $REACT_APP_LOCAL_BACKEND
-      REACT_APP_DEV_COGNITO_IDENTITY: $REACT_APP_DEV_COGNITO_IDENTITY
-      REACT_APP_DEV_COGNITO_REGION: $REACT_APP_DEV_COGNITO_REGION
-      REACT_APP_DEV_S3_BUCKET: $REACT_APP_DEV_S3_BUCKET
-      REACT_APP_DEV_S3_BUCKET_REGION: $REACT_APP_DEV_S3_BUCKET_REGION
-      REACT_APP_DEV_AUTH_DOMAIN: $REACT_APP_DEV_AUTH_DOMAIN
-      REACT_APP_DEV_AUTH_AUDIENCE: $REACT_APP_DEV_AUTH_AUDIENCE
-      REACT_APP_DEV_AUTH_CLIENT: $REACT_APP_DEV_AUTH_CLIENT
-      REACT_APP_DEV_BACKEND: $REACT_APP_DEV_BACKEND
-      REACT_APP_STAGE_AUTH_DOMAIN: $REACT_APP_STAGE_AUTH_DOMAIN
-      REACT_APP_STAGE_AUTH_AUDIENCE: $REACT_APP_STAGE_AUTH_AUDIENCE
-      REACT_APP_STAGE_AUTH_CLIENT: $REACT_APP_STAGE_AUTH_CLIENT
-      REACT_APP_STAGE_BACKEND: $REACT_APP_STAGE_BACKEND
-      REACT_APP_PROD_AUTH_DOMAIN: $REACT_APP_PROD_AUTH_DOMAIN
-      REACT_APP_PROD_AUTH_AUDIENCE: $REACT_APP_PROD_AUTH_AUDIENCE
-      REACT_APP_PROD_AUTH_CLIENT: $REACT_APP_PROD_AUTH_CLIENT
-      REACT_APP_PROD_BACKEND: $REACT_APP_PROD_BACKEND
       PORT: $PORT
       HTTPS: "true"
+      REACT_APP__FRESHBOOKS_CLIENT_ID: $REACT_APP_FRESHBOOKS_CLIENT_ID
+      REACT_APP__FRESHBOOKS_CLIENT_SECRET: $REACT_APP_FRESHBOOKS_CLIENT_SECRET
+      REACT_APP__AWS_COGNITO_IDENTITY: $REACT_APP__AWS_COGNITO_IDENTITY
+      REACT_APP__AWS_S3_BUCKET: $REACT_APP__AWS_S3_BUCKET
+      REACT_APP__AWS_S3_BUCKET_REGION: $REACT_APP__AWS_REGION
+      REACT_APP__AUTH0_DOMAIN: $REACT_APP__AUTH0_DOMAIN
+      REACT_APP__AUTH0_AUDIENCE: $REACT_APP__AUTH0_AUDIENCE
+      REACT_APP__AUTH0_CLIENT_ID: $REACT_APP__AUTH0_CLIENT_ID
+      REACT_APP__BACKEND: $REACT_APP__BACKEND
     restart: always
     ports:
       - $PORT:$PORT
