--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "devpie-client-app",
-  "version": "0.1.0",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
-    "start": "cross-env REACT_APP_ENV=local HTTPS=true react-app-rewired start",
-    "dev": "cross-env REACT_APP_ENV=dev HTTPS=true react-app-rewired start",
-    "stage": "cross-env REACT_APP_ENV=stage HTTPS=true react-app-rewired start",
-    "build:dev": "cross-env REACT_APP_ENV=dev react-scripts build",
-    "build:stage": "cross-env REACT_APP_ENV=stage react-scripts build",
-    "build:prod": "cross-env REACT_APP_ENV=prod react-scripts build",
+    "start": "HTTPS=true react-app-rewired start",
+    "dev": "HTTPS=true react-app-rewired start",
+    "stage": "HTTPS=true react-app-rewired start",
+    "build:dev": "react-scripts build",
+    "build:stage": "react-scripts build",
+    "build:prod": "react-scripts build",
     "postinstall": "patch-package",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
