--- a/.github/workflows/publish-spa-client.yml
+++ b/.github/workflows/publish-spa-client.yml
@@ -24,6 +24,18 @@ jobs:
         run: |
           export SHA=$(git rev-parse --short HEAD)
 
+          cat > .env <<EOF
+          REACT_APP__BACKEND=${{ secrets.BACKEND }}
+          REACT_APP__FRESHBOOKS_CLIENT_ID=${{ secrets.FRESHBOOKS_CLIENT_ID }}
+          REACT_APP__FRESHBOOKS_CLIENT_SECRET=${{ secrets.FRESHBOOKS_CLIENT_SECRET }}
+          REACT_APP__AWS_COGNITO_IDENTITY=${{ secrets.AWS_COGNITO_IDENTITY }}
+          REACT_APP__AWS_REGION=${{ secrets.AWS_REGION }}
+          REACT_APP__AWS_S3_BUCKET=${{ secrets.AWS_S3_BUCKET }}
+          REACT_APP__AUTH0_DOMAIN=${{ secrets.AUTH0_DOMAIN }}
+          REACT_APP__AUTH0_AUDIENCE=${{ secrets.AUTH0_AUDIENCE }}
+          REACT_APP__AUTH0_CLIENT_ID=${{ secrets.AUTH0_CLIENT_ID }}
+          EOF
+
           docker build . --tag ghcr.io/$OWNER/$IMAGE:$SHA
           docker push ghcr.io/$OWNER/$IMAGE:$SHA
 
