--- a/package.json
+++ b/package.json
@@ -1,33 +1,16 @@
 {
-  "name": "devpie-client-app",
-  "version": "0.0.2",
-  "private": true,
+  "name": "newapp",
+  "version": "0.0.0",
   "scripts": {
-    "start": "HTTPS=true react-app-rewired start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.12.0",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/styles": "4.10.0",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "4.11.4",
     "@reduxjs/toolkit": "^1.5.1",
     "@types/classnames": "^2.2.10",
     "@types/jsonwebtoken": "^8.5.0",
@@ -48,23 +31,22 @@
     "jwt-decode": "^2.2.0",
     "konva": "^2.5.1",
     "piexifjs": "^1.0.6",
-    "react": "^16.13.1",
-    "react-beautiful-dnd": "^10.1.0",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.0",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-dom": "^17.0.0",
     "react-redux": "^7.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.3",
-    "typescript": "~3.7.2",
     "ua-parser-js": "^0.7.22"
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.13.0",
-    "cross-env": "^7.0.2",
-    "customize-cra": "^1.0.0",
-    "react-app-rewired": "^2.1.6"
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "typescript": "^4.1.2",
+    "vite": "^2.2.3"
   }
 }
