--- a/package.json
+++ b/package.json
@@ -7,20 +7,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "react": "^17.0.0",
-    "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "^17.0.0",
-    "react-redux": "^7.1.0",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "@reduxjs/toolkit": "^1.5.1",
     "@auth0/auth0-spa-js": "^1.12.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "4.11.4",
-    "styled-components": "^5.2.3",
+    "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "history": "^4.7.2",
@@ -28,11 +19,19 @@
     "jwt-decode": "^2.2.0",
     "konva": "^2.5.1",
     "piexifjs": "^1.0.6",
+    "react": "^17.0.0",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-dom": "^17.0.0",
+    "react-query": "^3.15.2",
+    "react-redux": "^7.1.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.3",
     "ua-parser-js": "^0.7.22"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "@types/classnames": "^2.2.10",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/jwt-decode": "^2.2.1",
