--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ua-parser-js": "^0.7.22"
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^5.1.2",
     "@types/classnames": "^2.2.10",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/jwt-decode": "^2.2.1",
@@ -45,6 +46,7 @@
     "@types/styled-components": "^5.1.9",
     "@types/ua-parser-js": "^0.7.33",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "react-test-renderer": "^17.0.2",
     "typescript": "^4.1.2",
     "vite": "^2.2.3"
   }
