--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "dayjs": "^1.10.4",
     "history": "^4.7.2",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "konva": "^2.5.1",
+    "md5": "^2.3.0",
     "piexifjs": "^1.0.6",
     "react": "^17.0.0",
     "react-beautiful-dnd": "^13.1.0",
@@ -37,6 +39,7 @@
     "@types/classnames": "^2.2.10",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/jwt-decode": "^2.2.1",
+    "@types/md5": "^2.3.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.49",
     "@types/react-beautiful-dnd": "^13.0.0",
