--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^7.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-select": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.3",
