fix: incorrect env vars

--- a/.env.sample
+++ b/.env.sample
@@ -1,13 +1,6 @@
 # .env file
 
-HTTPS=true
-PORT=3000
-REACT_APP__BACKEND=
-REACT_APP__FRESHBOOKS_CLIENT_ID=
-REACT_APP__FRESHBOOKS_CLIENT_SECRET=
-REACT_APP__AWS_COGNITO_IDENTITY=
-REACT_APP__AWS_REGION=
-REACT_APP__AWS_S3_BUCKET=
-REACT_APP__AUTH0_DOMAIN=
-REACT_APP__AUTH0_AUDIENCE=
-REACT_APP__AUTH0_CLIENT_ID=
+VITE__BACKEND=http://localhost/api/v1
+VITE__AUTH0_DOMAIN=
+VITE__AUTH0_AUDIENCE=
+VITE__AUTH0_CLIENT_ID=
