--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "konva": "^8.0.2",
+    "mapbox-gl": "^2.9.1",
     "md5": "^2.3.0",
     "piexifjs": "^1.0.6",
     "rc-table": "^7.24.2",
     "react": "^18.1.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.1.0",
+    "react-map-gl": "^7.0.16",
     "react-query": "^3.15.2",
     "react-redux": "^7.1.0",
     "react-router": "^5.2.0",
@@ -56,7 +58,7 @@
     "@types/ua-parser-js": "^0.7.33"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=true SSL_CRT_FILE=./devpie.local.pem SSL_KEY_FILE=./devpie.local-key.pem react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
