--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "eslint-config-react-app": "^7.0.1"
   },
   "scripts": {
-    "start": "HTTPS=true SSL_CRT_FILE=./devpie.local.pem SSL_KEY_FILE=./devpie.local-key.pem PUBLIC_URL=https://devpie.local:3000 react-scripts start",
+    "start": "HTTPS=true SSL_CRT_FILE=./devpie.local.pem SSL_KEY_FILE=./devpie.local-key.pem react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
