DP-38 Support multi-tenant connections per user (#2)
* refactor: delete user hook

* feat: upgrade react router to v6 and clean up unused deps

* refactor: remove PUBLIC_URL from package json

* refactor: minimize code sprawl by maintaining app foundation in 1 file

* feat: add tenant path to routes

* feat: add base path to indicate active tenant

* docs: update documentation

--- a/package.json
+++ b/package.json
@@ -8,57 +8,34 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.0",
-    "@reduxjs/toolkit": "^1.5.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.0",
+    "@mui/styled-engine": "^5.8.7",
     "aws-amplify": "^4.3.25",
     "axios": "^0.21.1",
-    "classnames": "^2.2.6",
     "dayjs": "^1.10.4",
-    "history": "^4.7.2",
-    "jsonwebtoken": "^8.5.1",
-    "jwt-decode": "^2.2.0",
     "konva": "^8.0.2",
-    "mapbox-gl": "^2.9.1",
     "md5": "^2.3.0",
     "piexifjs": "^1.0.6",
     "rc-table": "^7.24.2",
     "react": "^18.1.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.1.0",
-    "react-map-gl": "^7.0.16",
     "react-query": "^3.15.2",
-    "react-redux": "^7.1.0",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-select": "^4.3.1",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.3",
-    "typescript": "^4.6.4",
-    "ua-parser-js": "^0.7.22",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.6.4"
   },
   "devDependencies": {
-    "@testing-library/react-hooks": "^5.1.2",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/jwt-decode": "^2.2.1",
     "@types/md5": "^2.3.0",
-    "@types/node": "^16.11.33",
-    "@types/react": "^18.0.9",
+    "@types/react": "^18.0.15",
     "@types/react-beautiful-dnd": "^13.1.2",
-    "@types/react-dom": "^18.0.3",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router": "^5.1.8",
-    "@types/react-router-dom": "^5.1.5",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.9",
-    "@types/ua-parser-js": "^0.7.33"
+    "eslint-config-react-app": "^7.0.1"
   },
   "scripts": {
-    "start": "HTTPS=true SSL_CRT_FILE=./devpie.local.pem SSL_KEY_FILE=./devpie.local-key.pem PUBLIC_URL=https://devpie.local:3000 react-scripts start",
+    "start": "HTTPS=true SSL_CRT_FILE=./devpie.local.pem SSL_KEY_FILE=./devpie.local-key.pem react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
