fix: amplify setup file creation #2

--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -34,7 +34,7 @@ jobs:
             "aws_project_region": "eu-central-1"
           };
           export default awsmobile;
-          EOT
+          EOF
 
       - name: Build and Push Image
         env:
