--- a/.github/workflows/client-frontend.yaml
+++ b/.github/workflows/client-frontend.yaml
@@ -96,6 +96,7 @@ jobs:
           git push
   deploy:
     runs-on: ubuntu-latest
+    needs: publish
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v3
