--- a/.github/workflows/client-frontend.yaml
+++ b/.github/workflows/client-frontend.yaml
@@ -49,7 +49,7 @@ jobs:
         run: npm i
 
       - name: Test
-        run: npm test - --passWithNoTests
+        run: npm test -- --passWithNoTests
 
       - name: Build
         run: npm run build
