--- a/.github/workflows/client-frontend.yaml
+++ b/.github/workflows/client-frontend.yaml
@@ -20,6 +20,9 @@ env:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - uses: actions/checkout@v2
       - uses: docker/login-action@v1
