fix: checkout repo in deploy job

--- a/.github/workflows/client-frontend.yaml
+++ b/.github/workflows/client-frontend.yaml
@@ -102,6 +102,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: publish
     steps:
+      - uses: actions/checkout@v2
       - name: Download artifact
         uses: actions/download-artifact@v3
         id: client
