--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "typescript": "^4.6.4"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1",
     "@types/md5": "^2.3.0",
     "@types/react": "^18.0.15",
     "@types/react-beautiful-dnd": "^13.1.2",
@@ -39,7 +38,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "i": "^0.3.7",
-    "npm": "^8.13.2"
+    "npm": "^8.13.2",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "HTTPS=true SSL_CRT_FILE=./devpie.local.pem SSL_KEY_FILE=./devpie.local-key.pem react-scripts start",
