--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
 REACT_APP_USER_POOL_ID=[YOUR_SHARED_USER_POOL_ID_GOES_HERE]
 REACT_APP_USER_POOL_CLIENT_ID=[YOUR_SHARED_USER_POOL_CLIENT_ID_GOES_HERE]
+REACT_APP_STRIPE_KEY=[YOUR_STRIPE_KEY_GOES_HERE]
 REACT_APP_BACKEND=https://api.devpie.local/api
