feat: create payment intent and payment form

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 REACT_APP_USER_POOL_ID=[YOUR_SHARED_USER_POOL_ID_GOES_HERE]
 REACT_APP_USER_POOL_CLIENT_ID=[YOUR_SHARED_USER_POOL_CLIENT_ID_GOES_HERE]
 REACT_APP_STRIPE_KEY=[YOUR_STRIPE_KEY_GOES_HERE]
+REACT_APP_STRIPE_SECRET=[YOUR_STRIPE_KEY_GOES_HERE]
 REACT_APP_BACKEND=https://api.devpie.local/api
