--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.11",
     "aws-amplify": "^5.3.12",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
@@ -23,6 +25,7 @@
     "typescript": "^4.6.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.1",
     "@types/md5": "^2.3.0",
     "@types/react": "^18.0.15",
     "@types/react-beautiful-dnd": "^13.1.2",
